Add minor changes to landing and TnC pages.

--- a/t&c.html
+++ b/t&c.html
@@ -100,7 +100,7 @@
         <br>
         <p>Misahub stands for Medical Imaging and Signal Analysis Hub. Misahub is a virtual, open-source hub which aims to research, analyze and develop easy-to-use healthcare solutions with
         the help of emerging technologies like artificial intelligence, website development, android development, cloud
-        computing, block chain etc. It comprises of research students, faculty, doctors working in the field of AI in healthcare. <br><br>
+        computing, block chain etc. It comprises of research students, faculty, doctors working in the field of AI in healthcare. MISAHUB was functional from 2019 to 2024 and no longer takes new mentees. All the projects, code files, and datasets are available for resource and further use in research.<br><br>
         
         The work under Misahub comes from different research teams. As a result, the limitations and the rights
         asserted on datasets or code or research work vary. These differences can exist inside and between subsets of data or code or research
@@ -111,7 +111,7 @@
         track any user individually.
  
         <br><br>
-        For any suggestions, feedback, or collaboration proposals, reach out to us via our email- misahub2023@gmail.com, ask.misahub@gmail.com<br><br>
+        For any queries, please reach out to us via our email - <a href="mailto:palakhanda97@gmail.com">palakhanda97@gmail.com</a><br><br>
         </p>
         
         <b>Terms of use for datasets, code and research work</b><br>
@@ -153,7 +153,7 @@
         <br>
 
 
-        <script type="text/javascript" src="https://form.jotform.com/jsform/231102440862444"></script>
+        <!-- <script type="text/javascript" src="https://form.jotform.com/jsform/231102440862444"></script> -->
     </div>
 
 
