--- a/index-boxes.html
+++ b/index-boxes.html
@@ -143,7 +143,7 @@
                 <div class="row" style="margin-top:-6px;">
                     <center>
                     <p style="font-weight: bold; color: black; border-bottom: none; margin-bottom: 1rem; font-size:18px ">
-                                Modalities we work on:</p>
+                                Modalities we worked on:</p>
                      </center>
     
                     <!--<a href="timelineEEG.html">-->
